# chess

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: Handle_listeners.cc  Handle_listeners.hh  bitboard-operations.cc  bitboard-operations.hh  chessboard-representation.cc  chessboard-representation.hh  chessboard.cc  chessboard.hh  engine.cc  engine.hh  listener-manager.cc  listener-manager.hh  main.cc  masks.cc  masks.hh  move.cc  move.hh  option.cc  option.hh  perft.cc  perft.hh  pgn-move.hh  position.hh  position.hxx
src/chess_engine/ai/: ai.cc  ai.hh  evaluation.cc  evaluation.hh  gtree.cc  gtree.hh  search.cc  search.hh  tools.cc  tools.hh
src/chess_engine/board/: bitboard-operations.cc  bitboard-operations.hh  chessboard-interface.hh  chessboard-representation.cc  chessboard-representation.hh  chessboard.cc  chessboard.hh  magic.cc  magic.hh  masks.cc  masks.hh  move.cc  move.hh  position.hh  position.hxx  rule.cc  rule.hh  zobrist.cc  zobrist.hh
src/listener/: Handle_listeners.cc  Handle_listeners.hh  listener-wrapper.cc  listener.hh
src/parsing/: option.cc  option.hh
src/parsing/perft-parser/: fen-object.cc  fen-object.hh  fen-rank.cc  fen-rank.hh  perft-object.cc  perft-object.hh  perft_parser.cc  perft_parser.hh
src/parsing/pgn-parser/: pgn-exception.cc  pgn-move.cc  pgn-move.hh  pgn-parser.cc
tests/unit/: ai-tests.cc  chessboard-representation-tests.cc  chessboard-tests.cc  evaluation-tests.cc  hashing-tests.cc  magic-tests.cc  move-generation-tests.cc  option-tests.cc  perft-parsing-tests.cc  search-tests.cc
tools/: perft_print.py
